fixed content sticking out of container

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -7,7 +7,7 @@
     --red-dark: #e43a4b;
     --grey: #a3a5a5;
     --light-grey: #eee;
-    --black: #000;
+    --black: #212121;
 }
 html, body{
     height: 100%;
@@ -42,6 +42,11 @@ h4{
     font-size: 1.5rem;
     margin-top: 0;
 }
+h5{
+    font-size: 1.4rem;
+    color: var(--red-dark);
+
+}
 h6{
     font-size: 1.2rem;
     margin: 0;
@@ -66,11 +71,10 @@ mark{
     background-color: var(--light-grey);
 }
 .container{
+    padding: 2rem 1rem;
     margin-right: auto;
     margin-left: auto;
-    min-width: 1200px;
-    max-width: 1200px;
-    padding: 2rem 0;
+    max-width: 1200px;    
 }
 .flex-grow-equal{
     flex-grow: 1;
@@ -93,6 +97,7 @@ header{
     margin: 0px 8rem;
     display: flex;
     height: 100%;
+    align-items: center;
 }
 .brand{
     text-transform: uppercase;
@@ -275,3 +280,161 @@ header{
 }
 
 /* XXX RESUME */
+.resume-grid--container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 1fr;
+    grid-gap: 1rem;
+}
+.resume-grid--item{
+    background-color: white;
+    padding: 1rem 2rem;
+}
+.resume-grid--item section{
+    margin: 0 0 2rem 0;
+}
+.resume-grid--item h5{
+    margin: 0 0 .3rem 0;
+}
+.resume-grid--item h6{
+    font-weight: 500;
+}
+.resume-grid--item time{
+    font-style: italic;
+    color: var(--grey);
+}
+.resume-grid--item p{
+    margin: .3rem 0 0 0;
+}
+
+/* XXX HIRE ME */
+#hire{
+    padding: 3rem;
+    background-color: var(--red-dark);
+    text-align: center;
+}
+#hire h3{
+    color: var(--white);
+}
+#hire a{
+    padding: .5rem 2rem;
+    background-color: var(--white);
+    color: var(--red-dark);
+    border: none;
+    border-radius: .3em;
+}
+#hire a:hover{
+    background-color: var(--red-dark);
+    color: var(--white);
+    box-shadow: 0 0 0 1px var(--white);  /* YYY border adds 1px; outline doesnt have radius so Ive used css trick with box-shadow*/  
+}
+
+/* XXX CONTACT */
+.contact-grid--container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 1fr;
+    grid-gap: 1rem;
+}
+.contact-form{
+    background-color: var(--white);
+    padding: 2rem 1rem;
+}
+.contact-form h6{
+    font-size: 2rem;
+    letter-spacing: -1px;
+    font-weight: 100;
+}
+.contact-form p{
+    margin: 0.2rem 0 1rem 0;
+    color: var(--grey);
+    font-style: italic;
+}
+#contact-form{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 1fr 3fr 1fr;
+    grid-gap: 1rem;
+}
+.contact-form--item1{
+    grid-column: 1 / 2;
+    min-height: 2rem;
+}
+.contact-form--item2{
+    grid-column: 2 / -1;
+}
+.contact-form--item3{
+    grid-column: 1 / -1;
+}
+.contact-form--item4{
+    grid-column: 1 / 3;
+    color: var(--white);
+    background-color: var(--red-dark);
+    font-weight: 700;
+    border: none;
+    border-radius: .3rem;
+}
+.contact-form--item4:hover{
+    background-color: var(--black);
+}
+
+.contact-info{
+    padding: 2rem 1rem;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(3, 1fr);
+    background-color: var(--white);    
+}
+.contact-info-grid--container{
+    display: grid;
+    grid-template-columns: 0.2fr 1fr;
+    grid-template-rows: 1fr;
+}
+.contact-info-grid--item1{
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+    text-align: center;
+}
+.contact-info-grid--item2{
+    grid-column: 2 / -1;
+    grid-row: 1 / 1;
+}
+.contact-info-grid--item3{
+    grid-column: 2 / -1;
+    grid-row: 3 / -1;
+    color: var(--grey);
+    font-style: italic;
+    margin: 0;
+}
+
+
+
+
+/* XXX FOOTER */
+footer{
+    background-color: var(--black);
+    color: var(--white);
+    text-align: center;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 3fr 1fr;
+}
+.footer-top{
+    padding: 3rem 0;
+    border-bottom: 1px solid var(--white-transparent);;
+}
+.footer-top h2{
+    margin: 0 0 1rem 0;
+    font-size: 3rem;
+    letter-spacing: 3px;
+}
+.footer-top a{
+    margin: 0 .5rem;
+}
+.footer-top i:hover{
+    color: #e34f5f;
+}
+.footer-bottom{
+    font-style: italic;
+    color: var(--grey);
+}
